# ChangeLog for sys-libs/libcap-ng
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/libcap-ng/ChangeLog,v 1.2 2009/09/30 08:36:38 fauli Exp $

  30 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  libcap-ng-0.6.1.ebuild:
  add ~x86, bug 284655

*libcap-ng-0.6.1 (12 Sep 2009)

  12 Sep 2009; Alin Năstac <mrness@gentoo.org>
  +files/libcap-ng-gentoo.patch, +metadata.xml, +libcap-ng-0.6.1.ebuild:
  Initial version.
